@@ -1,0 +1,8 @@
+// -*- MPC -*-
+// $Id$
+
+project(*Server): taoserver {
+  Source_Files {
+    Bug_3566_Regression_Test.cpp
+  }
+}
